Update cvxpy travis installation.

--- a/.travis.yml
+++ b/.travis.yml
@@ -21,7 +21,7 @@ install:
   - conda config --set always_yes yes --set changeps1 no
   - conda update -q conda
   - conda info -a  # Useful for debugging any issues with conda
-  - conda create -q -n test-environment python=$TRAVIS_PYTHON_VERSION numpy scipy cvxgrp cvxpy pytest
+  - conda create -q -n test-environment python=$TRAVIS_PYTHON_VERSION numpy scipy cvxpy pytest
   - source activate test-environment
   - python setup.py install
   - pip install codecov pytest-cov codeclimate-test-reporter
